更新 inquire.html

--- a/web/inquire.html
+++ b/web/inquire.html
@@ -212,7 +212,7 @@ util.event('lay-header-event', {
       }
   }
 
-  function checkName() {//检查姓名是否合适
+  function checkName() {//检查姓名
       var name = $("#input_name").val()
       if(name == "" || name == null) {
           $("#nameWarn").html("姓名不能为空！")
