--- a/web/addtion.html
+++ b/web/addtion.html
@@ -62,9 +62,9 @@
         <li class="layui-nav-item layui-nav-itemed">
           <a class="" href="javascript:;">学生信息</a>
           <dl class="layui-nav-child">
-			<dd><a href="inquire.html">学生信息查询</a></dd>
-            <dd><a href="modification.html">学生信息修改及删除</a></dd>
-            <dd><a href="addtion.html">学生信息录入</a></dd>
+			<dd><a href="inquire.html">学生成绩信息查询</a></dd>
+            <dd><a href="modification.html">学生成绩信息修改及删除</a></dd>
+            <dd><a href="addtion.html">学生成绩信息录入</a></dd>
             
           </dl>
         </li>
