--- a/web/gradeList.html
+++ b/web/gradeList.html
@@ -5,7 +5,7 @@
 	<meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<title>学生信息管理</title>
+	<title>学生成绩信息管理</title>
 	<link rel="stylesheet" href="./layer/theme/default/layer.css">
 	<link rel="stylesheet" type="text/css" href="./css/reponse.css">
 	<link rel="stylesheet" type="text/css" href="./css/lib/bootstrap.min.css">
@@ -39,7 +39,7 @@
 			<form class="form-horizontal" id="input_form" onsubmit="return submitInfo();">
 				<fieldset>
 					<!-- Form Name -->
-					<legend>学生信息录入</legend>
+					<legend>学生成绩信息录入</legend>
 
 					<!-- Multiple Radios (inline) -->
 					<div class="control-group">
