--- a/web/inquire.html
+++ b/web/inquire.html
@@ -62,18 +62,18 @@
         <li class="layui-nav-item layui-nav-itemed">
           <a class="" href="javascript:;">学生信息</a>
           <dl class="layui-nav-child">
-            <dd><a href="inquire.html">学生信息查询</a></dd>
-            <dd><a href="modification.html">学生信息修改及删除</a></dd>
-            <dd><a href="addtion.html">学生信息录入</a></dd>
+            <dd><a href="inquire.html">学生成绩信息查询</a></dd>
+            <dd><a href="modification.html">学生成绩信息修改及删除</a></dd>
+            <dd><a href="addtion.html">学生成绩信息录入</a></dd>
             
           </dl>
         </li>
         <li class="layui-nav-item">
-          <a href="javascript:;">menu group 2</a>
+          <a href="javascript:;">考试信息</a>
           <dl class="layui-nav-child">
-            <dd><a href="javascript:;">list 1</a></dd>
-            <dd><a href="javascript:;">list 2</a></dd>
-            <dd><a href="">超链接</a></dd>
+            <dd><a href="javascript:;">考试信息查询</a></dd>
+            <dd><a href="javascript:;">补考查询</a></dd>
+            
           </dl>
         </li>
         <li class="layui-nav-item"><a href="javascript:;">click menu item</a></li>
