--- a/web/login.html
+++ b/web/login.html
@@ -21,7 +21,7 @@
         <input class="input-normal" type="text" placeholder="用户名/学号" />
         <input class="input-normal" type="password" placeholder="密码" />
             <button class="btn-submit" type="submit">
-                  <a href="inquire.html"> 登陆</a>  
+                  <a href="./inquire.html"> 登陆</a>  
             </button>
             <style> 
                 a{ text-decoration:none} 
@@ -51,7 +51,7 @@
         <input class="input-normal" type="text" placeholder="用户名" />
         <input class="input-normal" type="password" placeholder="密码" />
         <button class="btn-submit" type="submit">
-            <a href="inquire.html"> 登陆</a>  
+            <a href="./inquire.html"> 登陆</a>  
       </button>
       </div>
       <div>
