--- a/web/login.html
+++ b/web/login.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <title></title>
         <link rel="stylesheet" href="css\login.css"  />
-        <script type="text/javascript" src="js\jquery-1.11.3.min.jss"></script>
+        <script type="text/javascript" src="js\jquery-1.11.3.min.js"></script>
  
         
     </head>
