--- a/web/exam.html
+++ b/web/exam.html
@@ -38,8 +38,8 @@
     <ul class="layui-nav layui-layout-right">
       <li class="layui-nav-item layui-hide layui-show-md-inline-block">
         <a href="javascript:;">
-          <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" class="layui-nav-img">
-          ***
+          <img src="img\headportrait.jpg" class="layui-nav-img">
+          徐楷
         </a>
         <dl class="layui-nav-child">
 			<dd><a href="">你的资料</a></dd>
