--- a/web/login.html
+++ b/web/login.html
@@ -20,47 +20,30 @@
       <div>
         <input id='stuname' class="input-normal" type="text" placeholder="用户名/学号" />
         <input id='stupwd' class="input-normal" type="password" placeholder="密码" />
-            <button class="btn-submit" type="submit">
-                  <a id='but1' href="./inquire.html"> 登陆</a>  
-            </button>
+            <button class="btn-submit" type="submit" id="login">登录</button>
 
 <script type="text/javascript">
 	function click(){
-		$.get("/buttonClicked",{"value":"send to server"},function(data){
-			console.log(data)})
+		
       $("#login").click(function() {
         $(".middle").toggleClass("middle-flip");
         });
-
-            let phone=$("#username")
-            let pwd=$("#password")
-            $("#but1").click(function(){
-                if(phone.val().length==0||pwd.val().length==0){
+$.get("/buttonClicked",{"value":"send to server"},function(data){
+			console.log(data)})
+            let name=$("#stuname")
+            let pwd=$("#stupwd")
+            $("#login").click(function(){
+                if(name.val().length==0||pwd.val().length==0){
                     alert("用户或密码不能为空")
                     return;
                 }
-                var getPhone=phone.val()
+                var getName=name.val()
                 var getPwd=pwd.val()
                 var data={
-                    "name":getPhone,
+                    "name":getName,
                     "pwd":getPwd
                 }
-                $.ajax({
-                    type:"POST",
-                    url:"http://localhost:3000/login.html",
-                    data:data,
-                    success:res=>{
-                        console.log(res)
-                        if(res.code==200){
-                            alert(res.msg)
-                        }else{
-                            alert(res.msg)
-                        }
-                    },
-                    error:err=>{
-                        console.log(err)
-                    }
-                })
+            
             })    
     }
  </script>
@@ -92,17 +75,17 @@
       <div>
         <input id='username' class="input-normal" type="text" placeholder="用户名" />
         <input id='password' class="input-normal" type="password" placeholder="密码" />
-        <button class="btn-submit" type="submit">
-            <a id="but2" href="./inquire.html"> 登陆</a>  
+        <button class="btn-submit" type="submit"id="but2">
+            <a href="./inquire.html"> 登陆</a>  
       </button>
       </div>
       <div>
         <p style="margin-top: 40px">如果您是学生，请</p>
-        <p>使用<a id="login">学生登陆</a></p>
+        <p>使用<a id="stulogin">学生登陆</a></p>
         <script type="text/javascript">
  
       // 点击login触发翻转样式
-        $("#login").click(function() {
+        $("#stulogin").click(function() {
         $(".middle").toggleClass("middle-flip");
         });
 
@@ -119,7 +102,7 @@
                     "name":getPhone,
                     "pwd":getPwd
                 }
-                $.ajax({
+                $().ajax({
                     type:"POST",
                     url:"http://localhost:3000/login.html",
                     data:data,
